--- a/main.css
+++ b/main.css
@@ -1,24 +1,279 @@
-#records {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #292932;
+  padding: 40px;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+}
+
+header {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+
+h1 {
+  font-family: 'Londrina Solid', cursive;
+  font-size: 72px;
+  margin: 0;
+  color: white;
+}
+
+@media screen and (max-width: 667px){
+  h1 {
+    font-size: 50px;
+  }
+}
+
+header img {
+  height: 29px;
+}
+
+.heading-content {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px;
+}
+
+@media screen and (min-width: 662px){
+  .heading-content {
+    grid-template-columns: 2.5fr 1fr;
+  }
+}
+
+.contribute-callout {
+  padding: 0 20px 20px 20px;
+  margin: 20px 0 0 0;
+  border: 3px solid #fae6e9;
+}
+
+.contribute-callout p {
+  color: white;
+  text-align: center;
+}
+
+.contribute-callout a {
+  color: #292932;
+  background-color: #effae6;
+  padding: 15px;
+  font-weight: 900;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: block;
+  transition: .5s;
+}
+
+.contribute-callout a:hover {
+  background-color: gold;
+  transition: .5s;
+}
+
+.contribute-callout img {
+  height: 27px;
+}
+
+.header {
+  background-color: lavender;
+  margin: 20px 0 0 0;
+  border: 1px solid lavender;
+  padding: 10px 20px;
+}
+
+h2 {
+  color: #292932;
+}
+
+#songs {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
     grid-gap: 20px;
+    max-width: 1220px;
+    margin: auto;
+    margin-bottom: 30px;
 }
 
-.record {
-    height: 300px;
-    width: 300px;
-    border: 3px solid black;
-    background-color: white;
+@media screen and (min-width: 662px){
+  #songs {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-.record-title {
-    border: 3px solid black;
-    background-color: lightgray;
+@media screen and (min-width: 992px){
+  #songs {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
-.vinyl {
-    height: 300px;
-    width: 300px;
-    border: 3px solid black;
-    background-color: gray;
+@media screen and (min-width: 1200px){
+  #songs {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+.emoji-card {
+    display: inline-block;
+    text-align: center;
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
+}
+
+.emoji-images img {
+    width: 42px;
+    margin-right: 5px;
+}
+
+@media screen and (max-width: 992px){
+  .emoji-images img {
+    width: 48px;
+  }
+}
+
+.emoji-images img:last-child {
+  margin-right: 0;
+}
+
+.emoji-images {
+  border-radius: 5px 5px 0 0;
+  box-shadow: 5px 5px 10px rgba(0,0,0,.1);
+  position: relative;
+  background-color: white;
+  padding: 20px 15px;
+  border-bottom: 2px solid #292932;
+}
+
+.emoji-card-title {
+  border-radius: 0 0 5px 5px;
+  box-shadow: 5px 5px 10px rgba(0,0,0,.1);
+  transition:all .2s;
+  transition: visibility 0s, height 0s, opacity 0.5s linear;
+  margin-top: 10px;
+  padding: 20px;
+  margin: 0;
+  background-color: lavender;
+}
+
+.emoji-card:nth-child(2n) .emoji-card-title,
+.emoji-card:nth-child(2n) .hint {
+    background-color: #fae6e9;
+}
+
+.emoji-card:nth-child(3n) .emoji-card-title,
+.emoji-card:nth-child(3n) .hint {
+    background-color: #e6f6fa;
+}
+
+.emoji-card:nth-child(5n) .emoji-card-title,
+.emoji-card:nth-child(5n) .hint {
+    background-color: #effae6;
+}
+
+.emoji-card:nth-child(6n) .emoji-card-title,
+.emoji-card:nth-child(6n) .hint {
+    background-color: #faefe6;
+}
+
+.emoji-card-title h3 {
+  color: #292932;
+  margin: 0;
+}
+
+.hide-card {
+  opacity: 0;
+  height: 0;
+  visibility: hidden;
+  transition: visibility 0s, opacity 0.5s linear;
+  padding: 0;
+}
+
+.reveal-card {
+  opacity: 1;
+  visibility: visible;
+  display: block;
+}
+
+.hint-container {
+  position: absolute;
+  right: -2px;
+  top: 2px;
+  height: 30px;
+  width: 30px;
+  overflow: visible;
+  z-index: 9999;
+}
+
+i {
+  font-size: 17px;
+  background-color: white;
+  border-radius: 50%;
+  color: #292932;
+}
+
+.hint-symbol {
+  background-color: #292932;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+
+.hint {
+  opacity: 0;
+  visibility: hidden;
+  display: block;
+  background-color: lavender;
+  color: #292932;
+  text-transform: capitalize;
+  width: 100px;
+  padding: 3px;
+  border-radius: 5px;
+  position: absolute;
+  left: -82px;
+  top: -30px;
+  z-index: -1;
+}
+
+.hint-reveal {
+  opacity: 1;
+  visibility: visible;
+}
+
+footer {
+  text-align: center;
+  max-width: 1000px;
+  margin: auto;
+  border-top: 1px solid white;
+  padding-top: 20px;
+}
+
+footer p {
+  line-height: 26px;
+  color: white;
+  font-size: 18px;
+}
+
+footer span {
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  color: gold;
+}
+
+footer img {
+  height: 19px;
+}
+
+#message {
+  display: none;
+  max-width: 1000px;
+  margin: auto;
+}
+
+#message p {
+  color: white;
+  font-size: 18px;
+  text-align: center;
 }
