--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #292932;
+  background-color: #352649;
   padding: 40px;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
@@ -16,7 +16,7 @@ header {
 
 
 h1 {
-  font-family: 'Londrina Solid', cursive;
+  font-family: 'Fredoka One', cursive;
   font-size: 72px;
   margin: 0;
   color: white;
@@ -77,14 +77,14 @@ header img {
 }
 
 .header {
-  background-color: lavender;
+  background-color: #fae6e9;
   margin: 20px 0 0 0;
-  border: 1px solid lavender;
+  border: 1px solid #fae6e9;
   padding: 10px 20px;
 }
 
 h2 {
-  color: #292932;
+  color: #352649;
 }
 
 #songs {
@@ -92,9 +92,8 @@ h2 {
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
     grid-gap: 20px;
-    max-width: 1220px;
-    margin: auto;
-    margin-bottom: 30px;
+    max-width: 1200px;
+    margin: 30px auto;
 }
 
 @media screen and (min-width: 662px){
@@ -106,12 +105,6 @@ h2 {
 @media screen and (min-width: 992px){
   #songs {
     grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media screen and (min-width: 1200px){
-  #songs {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
@@ -139,23 +132,22 @@ h2 {
 }
 
 .emoji-images {
-  border-radius: 5px 5px 0 0;
   box-shadow: 5px 5px 10px rgba(0,0,0,.1);
   position: relative;
   background-color: white;
   padding: 20px 15px;
-  border-bottom: 2px solid #292932;
+  border-bottom: 2px solid #352649;
 }
 
 .emoji-card-title {
-  border-radius: 0 0 5px 5px;
   box-shadow: 5px 5px 10px rgba(0,0,0,.1);
   transition:all .2s;
   transition: visibility 0s, height 0s, opacity 0.5s linear;
   margin-top: 10px;
-  padding: 20px;
   margin: 0;
   background-color: lavender;
+  display: grid;
+  grid-template-columns: .2fr 1fr;
 }
 
 .emoji-card:nth-child(2n) .emoji-card-title,
@@ -178,9 +170,27 @@ h2 {
     background-color: #faefe6;
 }
 
+.emoji-card-link i {
+  background-color: transparent;
+  font-size: 37px;
+}
+
+.emoji-card-link {
+  margin: auto;
+}
+
 .emoji-card-title h3 {
-  color: #292932;
+  color: #352649;
   margin: 0;
+}
+
+.title-content {
+  padding: 20px;
+  text-align: left;
+}
+
+.title-content h4 {
+  margin: 5px auto 0 auto;
 }
 
 .hide-card {
@@ -211,11 +221,11 @@ i {
   font-size: 17px;
   background-color: white;
   border-radius: 50%;
-  color: #292932;
+  color: #352649;
 }
 
 .hint-symbol {
-  background-color: #292932;
+  background-color: #352649;
   height: 20px;
   width: 20px;
   border-radius: 50%;
@@ -226,7 +236,7 @@ i {
   visibility: hidden;
   display: block;
   background-color: lavender;
-  color: #292932;
+  color: #352649;
   text-transform: capitalize;
   width: 100px;
   padding: 3px;
