update button color to increase contrast

--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ header img {
 
 .contribute-callout a {
   color: #3E3C5E;
-  background-color: #ff7676;
+  background-color: white;
   padding: 15px;
   font-weight: 900;
   text-align: center;
