--- a/main.css
+++ b/main.css
@@ -1,329 +1,332 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  background-color: #3E3C5E;
-  padding: 40px;
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
+	background-color: #3e3c5e;
+	padding: 40px;
+	font-family: 'Open Sans', sans-serif;
+	margin: 0;
 }
 
 header {
-  max-width: 1000px;
-  margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto;
 }
-
 
 h1 {
-  font-family: 'Fredoka One', cursive;
-  font-size: 72px;
-  margin: 0;
-  color: white;
+	font-family: 'Fredoka One', cursive;
+	font-size: 72px;
+	margin: 0;
+	color: white;
 }
 
-@media screen and (max-width: 667px){
-  h1 {
-    font-size: 50px;
-  }
+@media screen and (max-width: 667px) {
+	h1 {
+		font-size: 50px;
+	}
 }
 
 header img {
-  height: 29px;
+	height: 29px;
 }
 
 .heading-content {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 20px;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 20px;
 }
 
-@media screen and (min-width: 662px){
-  .heading-content {
-    grid-template-columns: 2.5fr 1fr;
-  }
+@media screen and (min-width: 662px) {
+	.heading-content {
+		grid-template-columns: 2.5fr 1fr;
+	}
 }
 
 .contribute-callout {
-  padding: 0 20px 20px 20px;
-  margin: 20px 0 0 0;
-  border: 3px solid #fae6e9;
+	padding: 0 20px 20px 20px;
+	margin: 20px 0 0 0;
+	border: 3px solid #fae6e9;
 }
 
 .contribute-callout p {
-  color: white;
-  text-align: center;
+	color: white;
+	text-align: center;
 }
 
 .contribute-callout a {
-  color: #3E3C5E;
-  background-color: white;
-  padding: 15px;
-  font-weight: 900;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  display: block;
-  transition: .5s;
+	color: #3e3c5e;
+	background-color: white;
+	padding: 15px;
+	font-weight: 900;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+	display: block;
+	transition: 0.5s;
 }
 
 .contribute-callout a:hover {
-  background-color: gold;
-  transition: .5s;
+	background-color: gold;
+	transition: 0.5s;
 }
 
 .contribute-callout img {
-  height: 27px;
+	height: 27px;
 }
 
 .header {
-  background-color: #ff7676;
-  margin: 20px 0 0 0;
-  border: 1px solid #ff7676;
-  padding: 10px 20px;
+	background-color: #ff7676;
+	margin: 20px 0 0 0;
+	border: 1px solid #ff7676;
+	padding: 10px 20px;
 }
 
 h2 {
-  color: #352649;
+	color: #352649;
 }
 
 #songs {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: auto;
-    grid-gap: 20px;
-    max-width: 1000px;
-    margin: 30px auto;
-    grid-template-rows: min-content;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-auto-rows: auto;
+	grid-gap: 20px;
+	max-width: 1000px;
+	margin: 30px auto;
+	grid-template-rows: min-content;
 }
 
-@media screen and (min-width: 662px){
-  #songs {
-    grid-template-columns: 1fr 1fr;
-  }
+@media screen and (min-width: 662px) {
+	#songs {
+		grid-template-columns: 1fr 1fr;
+	}
 }
 
-@media screen and (min-width: 992px){
-  #songs {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
+@media screen and (min-width: 992px) {
+	#songs {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
 }
 
-@media screen and (min-width: 1200px){
-  #songs {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
+@media screen and (min-width: 1200px) {
+	#songs {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+	}
 }
 
 .emoji-card {
-    display: inline-block;
-    text-align: center;
-    border-radius: 5px;
-    position: relative;
-}
-
-@media screen and (max-width: 425px){
-  .emoji-card {
-    margin: 0 15%;
-  }
+	display: inline-block;
+	text-align: center;
+	border-radius: 5px;
+	position: relative;
 }
 
 .emoji-card-wrapper {
-  width: 180px;
-  position: relative;
+	width: 180px;
+	position: relative;
 }
 
-
 .emoji-images {
-  box-shadow: 5px 5px 10px rgba(0,0,0,.1);
-  position: relative;
-  background-color: white;
-  padding: 20px 15px;
-  border-bottom: 2px solid #352649;
-  height: 180px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+	position: relative;
+	background-color: white;
+	padding: 20px 15px;
+	border-bottom: 2px solid #352649;
+	height: 180px;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 .emoji-images:before {
-  position: absolute;
-  content: '';
-  height: 155px;
-  width: 155px;
-  background-color: #c976ff;
-  border: 42px solid #292932;
-  border-radius: 50%;
-  box-sizing: border-box;
-  z-index: -1;
-  right: -58px;
-  top: 9px;
+	position: absolute;
+	content: '';
+	height: 155px;
+	width: 155px;
+	background-color: #c976ff;
+	border: 42px solid #292932;
+	border-radius: 50%;
+	box-sizing: border-box;
+	z-index: -1;
+	right: -58px;
+	top: 9px;
 }
 
 .emoji-images img {
-    width: 42px;
-    margin-right: 5px;
+	width: 42px;
+	margin-right: 5px;
 }
 
 .emoji-images img:last-child {
-  margin-right: 0;
+	margin-right: 0;
 }
 
 .emoji-card-title {
-  box-shadow: 5px 5px 10px rgba(0,0,0,.1);
-  transition:all .2s;
-  transition: visibility 0s, height 0s, opacity 0.5s linear;
-  margin-top: 10px;
-  margin: 0;
-  background-color: #c976ff;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+	transition: all 0.2s;
+	transition: visibility 0s, height 0s, opacity 0.5s linear;
+	margin-top: 10px;
+	margin: 0;
+	background-color: #c976ff;
 }
 
 .emoji-card:nth-child(2n) .emoji-card-title,
 .emoji-card:nth-child(2n) .hint,
-.emoji-card:nth-child(2n) .emoji-images:before{
-    background-color: #76ffd2;
+.emoji-card:nth-child(2n) .emoji-images:before {
+	background-color: #76ffd2;
 }
 
 .emoji-card:nth-child(3n) .emoji-card-title,
 .emoji-card:nth-child(3n) .hint,
-.emoji-card:nth-child(3n) .emoji-images:before{
-    background-color: #76b4ff;
+.emoji-card:nth-child(3n) .emoji-images:before {
+	background-color: #76b4ff;
 }
 
 .emoji-card:nth-child(5n) .emoji-card-title,
 .emoji-card:nth-child(5n) .hint,
-.emoji-card:nth-child(5n) .emoji-images:before{
-    background-color: #ff7676;
+.emoji-card:nth-child(5n) .emoji-images:before {
+	background-color: #ff7676;
 }
 
 .emoji-card:nth-child(6n) .emoji-card-title,
 .emoji-card:nth-child(6n) .hint,
-.emoji-card:nth-child(6n) .emoji-images:before{
-    background-color: #ffcd76;
+.emoji-card:nth-child(6n) .emoji-images:before {
+	background-color: #ffcd76;
 }
 
 .emoji-card-link i {
-  background-color: transparent;
-  font-size: 37px;
-  opacity: .5;
+	background-color: transparent;
+	font-size: 37px;
+	opacity: 0.5;
 }
 
 .emoji-card-link {
-    text-align: left;
-    padding: 20px 20px 0 20px;
+	text-align: left;
+	padding: 20px 20px 0 20px;
 }
 
 .emoji-card-title h3 {
-  color: black;
-  margin: 0;
-  font-size: 18px;
+	color: black;
+	margin: 0;
+	font-size: 18px;
 }
 
 .title-content {
-  padding: 20px;
-  text-align: left;
-  cursor: initial;
+	padding: 20px;
+	text-align: left;
+	cursor: initial;
 }
 
 .title-content h4 {
-  margin: 5px auto 0 auto;
-  font-weight: normal;
+	margin: 5px auto 0 auto;
+	font-weight: normal;
 }
 
 .hide-card {
-  opacity: 0;
-  height: 0;
-  visibility: hidden;
-  transition: visibility 0s, opacity 0.5s linear;
-  padding: 0;
+	opacity: 0;
+	height: 0;
+	visibility: hidden;
+	transition: visibility 0s, opacity 0.5s linear;
+	padding: 0;
 }
 
 .reveal-card {
-  opacity: 1;
-  visibility: visible;
-  display: block;
+	opacity: 1;
+	visibility: visible;
+	display: block;
 }
 
 .hint-container {
-  position: absolute;
-  right: -2px;
-  top: 2px;
-  height: 30px;
-  width: 30px;
-  overflow: visible;
-  z-index: 9999;
+	position: absolute;
+	right: -2px;
+	top: 2px;
+	height: 30px;
+	width: 30px;
+	overflow: visible;
+	z-index: 9999;
 }
 
 i {
-  font-size: 17px;
-  background-color: white;
-  border-radius: 50%;
-  color: black;
+	font-size: 17px;
+	background-color: white;
+	border-radius: 50%;
+	color: black;
 }
 
 .hint-symbol {
-  background-color: #3E3C5E;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
+	background-color: #3e3c5e;
+	height: 20px;
+	width: 20px;
+	border-radius: 50%;
 }
 
 .hint {
-  opacity: 0;
-  visibility: hidden;
-  display: block;
-  background-color: lavender;
-  color: #3E3C5E;
-  text-transform: capitalize;
-  width: 100px;
-  padding: 3px;
-  border-radius: 5px;
-  position: absolute;
-  left: -82px;
-  top: -30px;
-  z-index: -1;
+	opacity: 0;
+	visibility: hidden;
+	display: block;
+	background-color: lavender;
+	color: #3e3c5e;
+	text-transform: capitalize;
+	width: 100px;
+	padding: 3px;
+	border-radius: 5px;
+	position: absolute;
+	left: -82px;
+	top: -30px;
+	z-index: -1;
 }
 
 .hint-reveal {
-  opacity: 1;
-  visibility: visible;
+	opacity: 1;
+	visibility: visible;
 }
 
 footer {
-  text-align: center;
-  max-width: 1000px;
-  margin: auto;
-  border-top: 1px solid white;
-  padding-top: 20px;
+	text-align: center;
+	max-width: 1000px;
+	margin: auto;
+	border-top: 1px solid white;
+	padding-top: 20px;
 }
 
 footer p {
-  line-height: 26px;
-  color: white;
-  font-size: 18px;
+	line-height: 26px;
+	color: white;
+	font-size: 18px;
 }
 
 footer span {
-  font-weight: bold;
-  letter-spacing: 0.5px;
-  color: gold;
+	font-weight: bold;
+	letter-spacing: 0.5px;
+	color: gold;
 }
 
 footer img {
-  height: 19px;
+	height: 19px;
 }
 
 #message {
-  display: none;
-  max-width: 1000px;
-  margin: auto;
+	display: none;
+	max-width: 1000px;
+	margin: auto;
 }
 
 #message p {
-  color: white;
-  font-size: 18px;
-  text-align: center;
+	color: white;
+	font-size: 18px;
+	text-align: center;
 }
 
+@media screen and (max-width: 425px) {
+	.emoji-card {
+		/*margin: 0 15%;*/
+	}
+	.emoji-card-wrapper {
+		width: 240px;
+	}
+	.emoji-images {
+		padding: 30px;
+	}
+}
