--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #3E3C5E;
+  background-color: #3c3a4a;
   padding: 40px;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
@@ -56,7 +56,7 @@ header img {
 }
 
 .contribute-callout a {
-  color: #3E3C5E;
+  color: #3c3a4a;
   background-color: white;
   padding: 15px;
   font-weight: 900;
@@ -264,7 +264,7 @@ i {
 }
 
 .hint-symbol {
-  background-color: #3E3C5E;
+  background-color: #3c3a4a;
   height: 20px;
   width: 20px;
   border-radius: 50%;
@@ -275,7 +275,7 @@ i {
   visibility: hidden;
   display: block;
   background-color: lavender;
-  color: #3E3C5E;
+  color: #3c3a4a;
   text-transform: capitalize;
   width: 100px;
   padding: 3px;
