--- a/main.css
+++ b/main.css
@@ -327,3 +327,23 @@ footer img {
   text-align: center;
 }
 
+.playlist-links {
+  display: block;
+  margin-top: 8px;
+}
+
+.playlist-links-item {
+  border: 3px solid #352649;
+  padding: 8px;
+  margin-right: 8px;
+  margin-top: 8px;
+  color: #352649;
+  font-weight: 600;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.playlist-links-item i{
+  background: none;
+  margin-right: 8px;
+}
