--- a/main.css
+++ b/main.css
@@ -116,10 +116,9 @@ h2 {
 }
 
 .emoji-card {
-    display: inline-block;
-    text-align: center;
-    border-radius: 5px;
-    position: relative;
+  display: inline-block;
+  text-align: center;
+  position: relative;
 }
 
 @media screen and (max-width: 425px){
@@ -131,6 +130,7 @@ h2 {
 .emoji-card-wrapper {
   width: 180px;
   position: relative;
+  cursor: pointer;
 }
 
 
@@ -146,6 +146,7 @@ h2 {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  border-radius: 5px;
 }
 
 .emoji-images:before {
@@ -172,33 +173,57 @@ h2 {
 }
 
 .emoji-card-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 180px;
+  overflow: hidden;
+  height: 180px;
+  border-radius: 5px;
+}
+
+.emoji-card-title-wrapper {
   box-shadow: 5px 5px 10px rgba(0,0,0,.1);
   transition:all .2s;
   transition: visibility 0s, height 0s, opacity 0.5s linear;
   margin-top: 10px;
   margin: 0;
   background-color: #c976ff;
+  position: absolute;
+  left: 0;
+  top: 180px;
+  height: 180px;
+  width: 180px;
+  transition: top .3s;
 }
 
-.emoji-card:nth-child(2n) .emoji-card-title,
+.emoji-card:not(.hide-card) .emoji-card-title-wrapper {
+  top: 0;
+}
+
+.emoji-card:not(.hide-card) .emoji-card-title {
+  top: 0;
+}
+
+.emoji-card:nth-child(2n) .emoji-card-title-wrapper,
 .emoji-card:nth-child(2n) .hint,
 .emoji-card:nth-child(2n) .emoji-images:before{
     background-color: #76ffd2;
 }
 
-.emoji-card:nth-child(3n) .emoji-card-title,
+.emoji-card:nth-child(3n) .emoji-card-title-wrapper,
 .emoji-card:nth-child(3n) .hint,
 .emoji-card:nth-child(3n) .emoji-images:before{
     background-color: #76b4ff;
 }
 
-.emoji-card:nth-child(5n) .emoji-card-title,
+.emoji-card:nth-child(5n) .emoji-card-title-wrapper,
 .emoji-card:nth-child(5n) .hint,
 .emoji-card:nth-child(5n) .emoji-images:before{
     background-color: #ff7676;
 }
 
-.emoji-card:nth-child(6n) .emoji-card-title,
+.emoji-card:nth-child(6n) .emoji-card-title-wrapper,
 .emoji-card:nth-child(6n) .hint,
 .emoji-card:nth-child(6n) .emoji-images:before{
     background-color: #ffcd76;
@@ -224,20 +249,11 @@ h2 {
 .title-content {
   padding: 20px;
   text-align: left;
-  cursor: initial;
 }
 
 .title-content h4 {
   margin: 5px auto 0 auto;
   font-weight: normal;
-}
-
-.hide-card {
-  opacity: 0;
-  height: 0;
-  visibility: hidden;
-  transition: visibility 0s, opacity 0.5s linear;
-  padding: 0;
 }
 
 .reveal-card {
@@ -289,6 +305,9 @@ i {
 .hint-reveal {
   opacity: 1;
   visibility: visible;
+  z-index: 2;
+  pointer-events: none;
+  border-bottom: 2px solid white;
 }
 
 footer {
@@ -326,4 +345,3 @@ footer img {
   font-size: 18px;
   text-align: center;
 }
-
