--- a/main.css
+++ b/main.css
@@ -316,6 +316,19 @@ footer img {
   height: 19px;
 }
 
+.footer-list {
+  padding: 0px;
+}
+
+.footer-list li{
+  display: block;
+  margin: 8px
+}
+
+.footer-list p {
+	margin: 0px;
+}
+
 #message {
   display: none;
   max-width: 1000px;
